<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.authentication.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginWelcome"
        android:textColor="@color/colourToolBar"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/colourToolBar"
        android:hint="@string/log_in"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/colourToolBar"
        android:hint="@string/sign_up"
        android:textColor="@color/white" />

</LinearLayout>