<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.create.PlaceAdActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colourToolBar"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/Theme.HoganFarmMachinery.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:padding="10dp"
        android:text="@string/adDetails"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="675dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:paddingBottom="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioGroup
                    android:id="@+id/radioButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_for_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/for_sale" />

                    <RadioButton
                        android:id="@+id/radio_wanted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/wanted" />

                </RadioGroup>

                <Spinner
                    android:id="@+id/categorySpinner"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    android:layout_margin="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/spinner_bg"
                    android:dropDownWidth="300dp"
                    android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                    android:paddingEnd="14dp"
                    android:popupBackground="@android:color/white"
                    android:popupElevation="3dp"
                    android:stateListAnimator="@drawable/spinner_sla"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/chooseImage"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colourAddButton"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/button_addImage"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="12dp"
                        tools:ignore="ButtonStyle" />


                    <Button
                        android:id="@+id/selectLocation"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colourAddButton"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/button_location"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="12dp"
                        tools:ignore="ButtonStyle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/make"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/tractorMake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_tractorMake"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/tractorPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_tractorPrice"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="Autofill"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/tractorDescription"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:gravity="top"
                        android:hint="@string/hint_tractorDescription"
                        android:inputType="text|textMultiLine"
                        android:maxLength="200"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="Autofill"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/tractorImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colourAddButton"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:stateListAnimator="@null"
        android:text="@string/button_addTractor"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>