<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.MainTractor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colourToolBar"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/Theme.HoganFarmMachinery.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBarLayout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colourToolBar"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/button_addImage"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/tractorImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chooseImage"
            android:layout_marginTop="7dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tractorImage"
            android:padding="8dp">

            <EditText
                android:id="@+id/tractorMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_tractorMake"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="14sp" >

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/make"
            android:padding="8dp">

        <EditText
            android:id="@+id/tractorModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tractorModel"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:textColor="@color/black"
            android:layout_below="@id/tractorMake"
            android:textSize="14sp" >

        </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colourToolBar"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:stateListAnimator="@null"
            android:text="@string/button_addTractor"
            android:textColor="@color/white"
            android:layout_below="@id/model"
            android:textSize="16sp"/>




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>